knn: change insert_neighbor algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ FILE(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
-set(CMAKE_CXX_FLAGS_DEBUG_INIT "-g -Wall")
+set(CMAKE_CXX_FLAGS_DEBUG_INIT "-g -Wall -O0")
 set(CMAKE_CXX_FLAGS_RELEASE_INIT "-Wall -O3 -march=native")
 
 add_executable(${PROJECT_NAME} ${SRC})
